// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Alert prop type is marked as required 1`] = `
<div
  className="alert alert-undefined"
>
  

</div>
`;

exports[`Component: Alert renders an alert with a close-button 1`] = `
<div
  className="alert alert-test"
>
  

  <a
    data-alert-close=""
    href="#"
    onClick={[Function]}
  >
    
		
    <i
      aria-hidden="true"
      className="material-icons"
    >
      close
    </i>
    
	
  </a>
  

</div>
`;

exports[`Component: Alert renders an alert with icon 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon"
  >
    test
  </i>
  

</div>
`;

exports[`Component: Alert renders an alert with text 1`] = `
<div
  className="alert alert-test"
>
  

  <p>
    test
  </p>
  

</div>
`;

exports[`Component: Alert renders an alert with the correct type recieved from its props 1`] = `
<div
  className="alert alert-test"
>
  

</div>
`;

exports[`Component: Alert renders an alert without a close-button if no close prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

</div>
`;

exports[`Component: Alert renders an alert without an icon if no icon prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

</div>
`;

exports[`Component: Alert renders an alert without text if no text prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

</div>
`;

exports[`Component: Alert renders the children sent to the alert component and a alert-body 1`] = `
<div
  className="alert alert-test"
>
  

  <div
    className="alert-body"
  >
    <p>
      Alert text
    </p>
  </div>
  

</div>
`;

exports[`Component: Alert the close-button prevents default 1`] = `
<div
  className="alert alert-test"
>
  

  <a
    data-alert-close=""
    href="#"
    onClick={[Function]}
  >
    
		
    <i
      aria-hidden="true"
      className="material-icons"
    >
      close
    </i>
    
	
  </a>
  

</div>
`;

exports[`Component: ComplexAlert Proptypes renders with a close button when prop close is true 1`] = `
<div
  className="alert alert-complex alert-undefined"
>
  <header
    className="alert-header"
  >
    <a
      data-alert-close=""
      href="#"
      onClick={[Function]}
    >
      
		
      <i
        aria-hidden="true"
        className="material-icons"
      >
        close
      </i>
    </a>
    

  </header>
</div>
`;

exports[`Component: ComplexAlert Proptypes renders with an ID when prop id is provided 1`] = `
<div
  className="alert alert-complex alert-undefined"
  id="test-alert"
>
  <header
    className="alert-header"
  >
    

  </header>
</div>
`;

exports[`Component: ComplexAlert Proptypes renders with an icon when prop icon is provided 1`] = `
<div
  className="alert alert-complex alert-undefined"
>
  <header
    className="alert-header"
  >
    

     
    <i
      aria-hidden="true"
      className="material-icons alert-icon"
    >
      home
    </i>
    

  </header>
</div>
`;

exports[`Component: ComplexAlert Proptypes renders with the correct class when prop type is provided 1`] = `
<div
  className="alert alert-complex alert-default"
>
  <header
    className="alert-header"
  >
    

  </header>
</div>
`;

exports[`Component: ComplexAlert Proptypes renders with the passed children when prop children is provided 1`] = `
<div
  className="alert alert-complex alert-undefined"
>
  <header
    className="alert-header"
  >
    

  </header>
  

  <div
    className="alert-body"
  >
    Complex children...
  </div>
  

</div>
`;

exports[`Component: ComplexAlert Proptypes renders with the passed header text when prop headerText is provided 1`] = `
<div
  className="alert alert-complex alert-undefined"
>
  <header
    className="alert-header"
  >
    

    <h3>
      My custom header text
    </h3>
    

    

  </header>
</div>
`;

exports[`Component: ComplexAlert renders 1`] = `
<div
  className="alert alert-complex alert-undefined"
>
  <header
    className="alert-header"
  >
    

  </header>
</div>
`;
